# py-nusantara

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: backend_db.md  backend_zero_db.md  data_science.md  getting_started.md
examples/: backend_db_demo.py  backend_zero_db_demo.py  data_science_demo.ipynb  data_science_demo.py
src/py_nusantara/: __init__.py  cache.py  config.py  db.py  downloader.py  exceptions.py  historical.py  manifest.py  nik.py  postal_code.py  query_adapter.py  reader.py  records.py  search.py  shared_memory.py  spatial.py  utils.py
tests/: test_nusantara.py
